fix(footer): hide overflow

--- a/css/footer.css
+++ b/css/footer.css
@@ -4,7 +4,8 @@
   justify-content: space-between;
   flex-flow: row wrap;
   border-top: 4px solid black;
-  margin-top: 10px
+  margin-top: 10px;
+  overflow: hidden;
 }
 
 .footer > div {
